# psr-templates

./: .coverage  .gitignore  .pre-commit-config.yaml  AUDIT-FINDINGS.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  MULTI-RELEASE-CI-PLAN.md  Makefile  README.md  REVERT.md  TESTING-STRATEGY.md  arranger-removal-plan.md  general-cleanup-plan.md  kodi-implementation-plan.md  psr-template-test-harness-overview.md  psr-template-test-harness-plan.md  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/prompts/: architecture.md  conventions.md  environment.md  plan-ComprehensiveRefactorForSelfContainedPSRTestHarness.prompt.md  plan-RefactorArrangerForConfigurablePSRTemplateApplication.prompt.md  plan-RefactorWorkflowForSelfContainedPSRExecution.prompt.md  plan-UpdateCIWorkflowsForACTAndGitHub.prompt.md  protocols.md
.github/workflows/: dispatch-test-harness.yml  pr-validation.yml
arranger/: run.py
docs/: DISCOVERY_SAMPLE.md  PSR_PREPARE_DESIGN.md  testing.md
docs/development/: architecture.md  conventions.md  environment.md  template-context-filters.md
psr_templates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/arranger/: __init__.py  jinja_filters.py  run.py  test_helpers.py
src/arranger/templates/: __init__.py
src/arranger/templates/kodi-addons/: addon.xml.j2
src/arranger/templates/universal/: CHANGELOG.md.j2  DISCOVERY.md.j2
src/psr_prepare/: __init__.py  addon.py  cli.py  config.py  context.py  templating.py
src/psr_prepare/templates/kodi-addons/: addon.xml.j2
src/psr_prepare/templates/universal/: CHANGELOG.md.j2  DISCOVERY.md.j2
src/psr_templates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py
tests/integration/: test_phases.py
tests/integration/post_psr/: test_post_psr.py
tests/integration/pre_psr/: test_pre_psr.py
tests/unit/: conftest.py  test_arranger.py
tools/: check_kodi.py  generate_commits.py  render_template.py  test_template_rendering.py
